--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "source/app.js",
   "dependencies": {
     "ds18b20": "^0.1.0",
-    "onoff": "^1.1.1"
+    "onoff": "^1.1.1",
+    "express": "4.14.0"
   },
   "devDependencies": {},
   "scripts": {
